Enhance API documentation with OpenAPI annotations and improve response structures
- Added OpenAPI annotations to request and response DTOs for better API documentation.
- Updated ProductFilter to include additional filtering criteria.
- Enhanced CreateCategoryRequest, CreateOrderRequest, CreateProductRequest, CreateUserRequest, UpdateCategoryRequest, UpdateProductRequest, and UpdateUserRequest with detailed schema descriptions.
- Improved ApiResponse and ErrorDetail classes for consistent error handling and response formatting.
- Updated Page and Pageable classes to include schema annotations for pagination.
- Configured OpenAPI settings in a new OpenAPIConfig class for better API documentation management.
- Modified application.properties to enable Swagger UI and customize its settings.
- Cleaned up GlobalExceptionHandler by removing unused exception handlers.
- Adjusted integration tests to remove unnecessary assertions and improve clarity.